@@ -7,6 +7,7 @@ Changes in <next version>:
  * Add lineup, linedown, lineleft and lineright markers
  * Add lineup, linedown and lineextend arrows
  * Raise exception if functions in console request input, avoiding hang
+ * Initialise unsafe_mode, in case Veusz used in PyQt embedding
 
 Changes in 1.24:
  * Text labels can now include Python expressions inside %{{ }}%
